--- a/package.json
+++ b/package.json
@@ -54,12 +54,21 @@
     "reflect-metadata": "0.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-classes": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "axios": "0.18.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "7.1.5",
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "6.23.0",
@@ -69,7 +78,7 @@
     "body-parser": "1.18.3",
     "config": "2.0.1",
     "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
+    "css-loader": "^1.0.0",
     "device": "0.3.9",
     "enzyme": "3.5.1",
     "enzyme-adapter-react-16": "1.5.0",
@@ -112,7 +121,7 @@
     "postcss-preset-env": "5.3.0",
     "prettier": "1.14.2",
     "prettier-eslint": "8.8.2",
-    "react-hot-loader": "4.3.5",
+    "react-hot-loader": "^4.6.0",
     "react-router-redux": "4.0.8",
     "react-svg-loader": "2.1.0",
     "redux-actions": "2.6.1",
@@ -120,7 +129,7 @@
     "redux-logger": "3.0.6",
     "requirejs": "2.1.22",
     "sass-loader": "7.1.0",
-    "style-loader": "0.22.1",
+    "style-loader": "^0.22.1",
     "title-case": "2.1.1",
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.1.1",
