update configs and scss.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:lint": "esw -w --quiet",
     "start": "npm-run-all --parallel dev:*",
     "lint": "eslint .",
-    "prebuild": "rimraf ../static/build",
+    "prebuild": "rimraf ./build",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.prod.js --progress",
     "prettier": "prettier --ignore-path .gitignore --write './**/*.js'",
     "test": "jest",
@@ -33,10 +33,11 @@
     ]
   },
   "dependencies": {
+    "carbon-components": "^9.89.0",
     "classnames": "2.2.6",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.11",
     "moment": "2.22.2",
     "mustache": "2.3.2",
     "react": "16.5.2",
@@ -46,35 +47,35 @@
     "react-modal": "3.6.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
-    "react-router-dynamic-breadcrumbs": "2.1.1",
     "react-transition-group": "^2.5.0",
     "redux": "4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "2.3.0",
-    "reflect-metadata": "0.1.2"
+    "reflect-metadata": "0.1.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-classes": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-transform-classes": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "axios": "0.18.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "babel-watch": "2.0.7",
+    "babel-watch": "^7.0.0",
     "body-parser": "1.18.3",
     "config": "2.0.1",
     "cross-env": "5.2.0",
@@ -83,7 +84,7 @@
     "enzyme": "3.5.1",
     "enzyme-adapter-react-16": "1.5.0",
     "enzyme-to-json": "3.3.4",
-    "eslint": "5.5.0",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.0.1",
     "eslint-plugin-babel": "5.1.0",
@@ -109,9 +110,9 @@
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "immutable": "3.8.2",
-    "jest": "23.5.0",
+    "jest": "^24.1.0",
     "mini-css-extract-plugin": "0.4.2",
-    "node-sass": "4.9.3",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.4",
     "normalizr": "3.2.4",
     "npm-run-all": "4.1.3",
@@ -129,6 +130,7 @@
     "redux-logger": "3.0.6",
     "requirejs": "2.1.22",
     "sass-loader": "7.1.0",
+    "sse": "0.0.8",
     "style-loader": "^0.22.1",
     "title-case": "2.1.1",
     "uglifyjs-webpack-plugin": "1.2.7",
