--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-modal": "3.6.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
-    "react-transition-group": "^2.5.0",
+    "react-transition-group": "^2.7.0",
     "redux": "4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "2.3.0",
@@ -134,6 +134,7 @@
     "style-loader": "^0.22.1",
     "title-case": "2.1.1",
     "uglifyjs-webpack-plugin": "1.2.7",
+    "uikit": "^3.0.3",
     "url-loader": "1.1.1",
     "webpack": "4.16.5",
     "webpack-bundle-analyzer": "^3.0.3",
