--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "carbon-components": "^9.89.0",
     "chart.js": "^2.8.0",
     "classnames": "2.2.6",
+    "google-maps-react": "^2.0.2",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
@@ -45,13 +47,16 @@
     "react-chartjs-2": "^2.7.4",
     "react-device-detect": "1.5.9",
     "react-dom": "16.5.2",
+    "react-google-maps": "^9.4.5",
     "react-loadable": "5.5.0",
     "react-modal": "3.6.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-transition-group": "^2.7.0",
+    "recompose": "^0.30.0",
     "redux": "4.0.0",
     "redux-form": "^7.4.2",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "2.3.0",
     "reflect-metadata": "0.1.2",
     "socket.io": "^2.2.0"
@@ -66,7 +71,6 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "axios": "0.18.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
